<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="coid.moonlay.pickupondemand.jet.fragment.TaskConfirmationDialogFragment">

    <LinearLayout
        android:id="@+id/ll_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        android:orientation="vertical"
        android:background="@color/colorPanelPrimary">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/medium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium_large"
            android:background="@color/colorPrimary"
            android:text="@string/notification_task_confirmation_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/medium"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_truck_white"/>
            <TextView
                android:id="@+id/tv_label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_small"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/pickup_name"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_small"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_medium_large"
                android:text="Patricia Aviani"/>
            <TextView
                android:id="@+id/tv_label_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/pickup_sender_address"/>
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_small"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_medium_large"
                android:text="Equity Tower 25TH floor, SCBD lot 9, \nJl. Jend. Sudirman kav.52 - 53"/>
            <TextView
                android:id="@+id/tv_label_address_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/pickup_sender_address_detail"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tv_address_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_small"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_medium_large"
                android:text="Pintu Lobby West"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/task_payment_method"/>
            <TextView
                android:id="@+id/tv_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_small"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_medium_large"
                android:text="COD"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextSecondary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/medium"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_medium_large"
                android:text="@string/notification_task_confirmation_message"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_small"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_large"
                    android:text="@string/notification_task_time_left"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/extra_small"
                    android:layout_marginStart="@dimen/extra_small"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_large"
                    android:text=":"/>
                <TextView
                    android:id="@+id/tv_time_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/extra_small"
                    android:layout_marginStart="@dimen/extra_small"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_large"
                    android:text="15"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/extra_small"
                    android:layout_marginStart="@dimen/extra_small"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_large"
                    android:text="@string/notification_task_time_unit_second"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small">
                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/custom_bg_rounded_square_red_fill"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/yes"/>
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/btn_ok"
                    android:layout_toStartOf="@id/btn_ok"
                    android:layout_marginRight="@dimen/small"
                    android:layout_marginEnd="@dimen/small"
                    android:background="@drawable/custom_bg_rounded_square_disabled_fill"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/cancel"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
