<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium"
    tools:context="coid.moonlay.pickupondemand.jet.fragment.ChangePasswordFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:hint="@string/old_password"
            android:selectAllOnFocus="true"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/medium"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:hint="@string/new_password"
            android:selectAllOnFocus="true"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/medium"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium"
            android:hint="@string/confirm_password"
            android:selectAllOnFocus="true"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/medium"
            android:textSize="@dimen/text_size_normal"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"/>

</LinearLayout>
