<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="coid.moonlay.pickupondemand.jet.fragment.FailedDeliveryFragment">

    <LinearLayout
        android:id="@+id/ll_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackgroundSecondary"
        android:layout_alignParentBottom="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextSecondary"/>
        <coid.moonlay.pickupondemand.jet.custom.CenteredIconButton
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:layout_marginRight="@dimen/medium"
            android:layout_marginBottom="@dimen/small"
            android:layout_marginLeft="@dimen/medium"
            android:background="@drawable/custom_bg_rounded_square_red_fill"
            android:drawableLeft="@drawable/ic_check_mark"
            android:drawableStart="@drawable/ic_check_mark"
            android:drawablePadding="@dimen/small"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/delivery_finish"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/ll_bottom_container"
        android:background="@color/colorPanelPrimary"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/delivery_failed_detail_label"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_operation_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textColorHint="@color/colorTextSecondary">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_operation_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/delivery_choose_failed_status"
                    android:focusable="false"
                    android:drawableRight="@drawable/ic_spinner_down"
                    android:drawableEnd="@drawable/ic_spinner_down"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_large"
                    android:theme="@style/CustomEditText"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkbox_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_large"
                    android:text="@string/delivery_failed_retry"
                    android:theme="@style/CheckboxPrimary"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/delivery_failed_note"/>
            <EditText
                android:id="@+id/et_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_medium_large"
                android:theme="@style/CustomEditText"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
