<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="coid.moonlay.pickupondemand.jet.fragment.UpdateRequiredDialogFragment">

    <LinearLayout
        android:id="@+id/ll_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        android:orientation="vertical"
        android:background="@color/colorPanelPrimary">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/medium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium_large"
            android:background="@color/colorPrimary"
            android:text="@string/update"/>
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium"
            android:textSize="@dimen/text_size_medium_large"
            android:textColor="@color/colorTextPrimary"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium">
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/custom_bg_rounded_square_red_fill"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/yes"/>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/btn_ok"
                android:layout_toStartOf="@id/btn_ok"
                android:layout_marginRight="@dimen/small"
                android:layout_marginEnd="@dimen/small"
                android:background="@drawable/custom_bg_rounded_square_disabled_fill"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/cancel"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
